--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,7 +19,7 @@
 
           <!-- # -->
           <li class="dropdown">
-            <a data-toggle="dropdown"
+            <a class="user-pic" data-toggle="dropdown"
                href="#userMenuDropDown"
                aria-haspopup="true"
                aria-expanded="false"
@@ -27,16 +27,22 @@
 
               <span class="pull-right">
                 <% if current_manager.picture? %>
-                  <%= image_tag(current_manager.picture) %>
+                  <%= `#{image_tag(current_manager.picture)} #{fa_icon 'caret-right'}` %>
                     <% else %>
-                  <%= image_tag('default-user.png') %>
+                  <%= "#{image_tag('default-user.png')} #{fa_icon 'caret-down'}".html_safe %>
                 <% end %>
               </span>
-              <%= current_manager.full_name %>
             </a>
 
             <!-- # Drop Down -->
             <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenuDropDown">
+
+              <li class="dropdown-item">
+                <% if current_manager.full_name %>
+                  <span>Signed as <b><%= current_manager.full_name %></b></span>
+                <% end %>
+              </li>
+
               <li class="dropdown-item">
                 <%= link_to edit_manager_registration_path(current_manager) do %>
                     <%= fa_icon 'user' %> Your profile
