Remove Text from Action on Edit Views

--- a/app/views/damage_types/index.html.erb
+++ b/app/views/damage_types/index.html.erb
@@ -33,13 +33,13 @@
         <td><%= damage_type.name %></td>
         <td>
           <%= link_to damage_type, :class => 'btn btn-outline-dark btn-sm' do %>
-              <%= fa_icon 'eye' %> Show
+              <%= fa_icon 'eye' %>
           <% end %>
           <%= link_to edit_damage_type_path(damage_type), :class => 'btn btn-outline-dark btn-sm' do %>
-              <%= fa_icon 'pencil' %> Edit
+              <%= fa_icon 'pencil' %>
           <% end %>
           <%= link_to damage_type, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-dark btn-sm' do %>
-              <%= fa_icon 'trash' %> Destroy
+              <%= fa_icon 'trash' %>
           <% end %>
         </td>
       </tr>
