--- a/app/views/break_causes/index.html.erb
+++ b/app/views/break_causes/index.html.erb
@@ -33,13 +33,13 @@
         <td><%= break_cause.name %></td>
         <td>
           <%= link_to break_cause, :class => 'btn btn-outline-dark btn-sm' do %>
-              <%= fa_icon 'eye' %> Show
+              <%= fa_icon 'eye' %>
           <% end %>
           <%= link_to edit_break_cause_path(break_cause), :class => 'btn btn-outline-dark btn-sm' do %>
-              <%= fa_icon 'pencil' %> Edit
+              <%= fa_icon 'pencil' %>
           <% end %>
           <%= link_to break_cause, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-dark btn-sm' do %>
-              <%= fa_icon 'trash' %> Destroy
+              <%= fa_icon 'trash' %>
           <% end %>
         </td>
       </tr>
