--- a/app/views/fuel_types/index.html.erb
+++ b/app/views/fuel_types/index.html.erb
@@ -33,13 +33,13 @@
         <td><%= fuel_type.name %></td>
         <td>
           <%= link_to fuel_type, :class => 'btn btn-outline-dark btn-sm' do %>
-              <%= fa_icon 'eye' %> Show
+              <%= fa_icon 'eye' %>
           <% end %>
           <%= link_to edit_fuel_type_path(fuel_type), :class => 'btn btn-outline-dark btn-sm' do %>
-              <%= fa_icon 'pencil' %> Edit
+              <%= fa_icon 'pencil' %>
           <% end %>
           <%= link_to fuel_type, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-dark btn-sm' do %>
-              <%= fa_icon 'trash' %> Destroy
+              <%= fa_icon 'trash' %>
           <% end %>
         </td>
       </tr>
