Add Sidebar Collapse

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<div class="col-sm-2 col-md-2 d-none d-sm-block sidebar">
+<div class="col-sm-2 col-md-2 sidebar">
 
   <!-- # Logo-->
   <div class="top-logo">
