--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -1,5 +1,3 @@
-
-
 .sidebar {
   position: fixed;
   top: 0;
@@ -96,4 +94,7 @@
   .fa-angle-right, .fa-angle-down {
     float: right;
   }
+  &.hidden {
+    display: none;
   }
+}
