--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,10 @@
         <!--  # Left -->
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a href="#"><i class="fa fa-navicon fa-lg"></i></a>
+            <a href="#" id="collapse-aside">
+              <i class="fa fa-navicon fa-lg"></i>
+            </a>
+
           </li>
         </ul>
 
