Change Show More Buttons Background to Gray

--- a/app/views/expenses/sub-pages/_breaks.html.erb
+++ b/app/views/expenses/sub-pages/_breaks.html.erb
@@ -42,7 +42,7 @@
           <%= link_to new_break_path, :class => 'btn btn-sm btn-info' do %>
               <%= fa_icon 'plus' %> Add an Break
           <% end %>
-          <%= link_to breaks_path, :class => 'btn btn-sm btn-info' do %>
+          <%= link_to breaks_path, :class => 'btn btn-sm btn-secondary' do %>
               <%= fa_icon 'list' %> Show More
           <% end %>
         </div>
