--- a/app/views/expenses/sub-pages/_damages.html.erb
+++ b/app/views/expenses/sub-pages/_damages.html.erb
@@ -50,7 +50,7 @@
           <%= link_to new_damage_path, :class => 'btn btn-sm btn-info' do %>
               <%= fa_icon 'plus' %> Add a Damage
           <% end %>
-          <%= link_to damages_path, :class => 'btn btn-sm btn-info' do %>
+          <%= link_to damages_path, :class => 'btn btn-sm btn-secondary' do %>
               <%= fa_icon 'list' %> Show More
           <% end %>
         </div>
