--- a/app/views/expenses/sub-pages/_insurances.html.erb
+++ b/app/views/expenses/sub-pages/_insurances.html.erb
@@ -45,7 +45,7 @@
           <%= link_to new_insurance_path, :class => 'btn btn-sm btn-info' do %>
               <%= fa_icon 'plus' %> Add an Insurance
           <% end %>
-          <%= link_to insurances_path, :class => 'btn btn-sm btn-info' do %>
+          <%= link_to insurances_path, :class => 'btn btn-sm btn-secondary' do %>
               <%= fa_icon 'list' %> Show More
           <% end %>
         </div>
