--- a/app/views/expenses/sub-pages/_owner_takes.html.erb
+++ b/app/views/expenses/sub-pages/_owner_takes.html.erb
@@ -44,7 +44,7 @@
           <%= link_to new_owner_take_path, :class => 'btn btn-sm btn-info' do %>
               <%= fa_icon 'plus' %> Add an Owner Take
           <% end %>
-          <%= link_to owner_takes_path, :class => 'btn btn-sm btn-info' do %>
+          <%= link_to owner_takes_path, :class => 'btn btn-sm btn-secondary' do %>
               <%= fa_icon 'list' %> Show More
           <% end %>
         </div>
