--- a/app/views/incomes/sub-pages/_manager_takes.html.erb
+++ b/app/views/incomes/sub-pages/_manager_takes.html.erb
@@ -42,7 +42,7 @@
             <%= link_to new_manager_take_path, :class => 'btn btn-sm btn-info' do %>
                 <%= fa_icon 'plus' %> Add a Manager Take
             <% end %>
-            <%= link_to manager_takes_path, :class => 'btn btn-sm btn-info' do %>
+            <%= link_to manager_takes_path, :class => 'btn btn-sm btn-secondary' do %>
                 <%= fa_icon 'list' %> Show More
             <% end %>
           </div>
