--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -12,7 +12,8 @@
   border-right: 1px solid #3e495f;
   font-weight: 100;
   font-size: 14px;
-  .top-logo {
+  .logo {
+    color: #acbad8;
     padding: 10px 0 20px 11px;
     .fa {
       color: #6b7fa7;
