--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,3 @@
-
-
-
 <div class="devise">
 
   <%= render 'devise/shared/logo' %>
@@ -30,7 +27,7 @@
             <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control', placeholder: 'password confirmation' %>
           </div>
 
-          <%= f.submit 'Sign up', class: 'btn btn-primary' %>
+          <%= f.submit 'Sign up', class: 'btn btn-info' %>
 
       <% end %>
 
