--- a/app/views/devise/shared/_logo.html.erb
+++ b/app/views/devise/shared/_logo.html.erb
@@ -1,5 +1,9 @@
 <div class="text-center">
-  <%= link_to root_path, :class => 'logo' do %>
-      <span>My<span>taxi</span></span>
-  <% end %>
+
+  <div class="logo">
+    <%= link_to root_path, :class => 'logo' do %>
+        <%= fa_icon 'cube' %> smartcab
+    <% end %>
+  </div>
+
 </div>
