--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -1,5 +1,3 @@
-
-
 .devise {
   margin: 5% auto;
   position: relative;
@@ -17,6 +15,14 @@
     }
   }
 
+  .logo {
+    font-size: 49px;
+    color: #5898a7;
+    &:hover {
+      color: #67919a;
+    }
+  }
+
   .text-center {
     text-align: center;
   }
@@ -31,6 +37,7 @@
   h3 {
     margin-top: 10px;
     text-transform: uppercase;
+    font-weight: 100;
   }
 
   p {
