--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -23,7 +23,7 @@
             <%= f.email_field :email, autofocus: true, class: 'form-control', placeholder: 'Email' %>
           </div>
 
-          <%= f.submit 'Send me reset instructions', class: 'btn btn-primary' %>
+          <%= f.submit 'Send me reset instructions', class: 'btn btn-info' %>
 
       <% end %>
 
