--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,7 +1,7 @@
 <div class="col-sm-2 col-md-2 sidebar">
 
   <!-- # Logo-->
-  <div class="top-logo">
+  <div class="logo">
     <%= link_to root_path, :class => 'logo' do %>
       <%= fa_icon 'cube' %> smartcab
     <% end %>
